--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Test go application
         run: go test ./... --cover
 
-      - name: Style codebase
+      - name: Style
         run: test -z $(go fmt ./...)
