--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,18 @@ jobs:
 
       - name: Test go application
         run: go test ./... --cover
+  style:
+    name: Style
+    runs-on: ubuntu-latest
 
-      - name: Style
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+            go-version: "1.23.0"
+      
+      - name: Go Format
         run: test -z $(go fmt ./...)
