--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,4 +33,4 @@ jobs:
         run: gcloud info
 
       - name: Build and push Docker image
-        run: gcloud builds submit --tag Rus-central1-docker.pkg.dev/notely-426003/notely-ar-repo/vuduong1/notely:latest .
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-426003/notely-ar-repo/vuduong1/notely:latest .
